--- a/src/main/resources/assets/tula.html
+++ b/src/main/resources/assets/tula.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="css/93767b1b7bf1.css">
     <script src="js/82ea9310961c.js"></script>
 
-    <link rel="icon" href="https://www.smartrac-group.com/files/img/favicon/favicon_2.ico"
-          type="image/vnd.microsoft.icon">
-    <link rel="shortcut icon" href="https://www.smartrac-group.com/files/img/favicon/favicon_2.ico"
-          type="image/vnd.microsoft.icon">
+    <link rel="icon" href="images/profiles_icon.png" type="image/png">
+    <link rel="shortcut icon" href="images/profiles_icon.png" type="image/png">
 
 </head>
 <body id="top" class="win chrome webkit ch39">
@@ -42,7 +40,7 @@
                         </li>
 
                         <li class="naviBigListeRoot01 sibling first">
-                            <a href="http://partner.smart-cosmos.com/" title="Partner and Developer Portal" class="naviBigListeRoot01 sibling first">Partner Portal</a>
+                            <a href="https://partner.smart-cosmos.com/" title="Partner and Developer Portal" class="naviBigListeRoot01 sibling first">Partner Portal</a>
                         </li>
 
                         <li class="naviBigListeRoot01 sibling first">
@@ -566,7 +564,7 @@
                             <a href="./index.html" title="Welcome" class="naviBigListeRoot01 sibling first">Welcome</a>
                         </li>
                         <li class="naviBigListeRoot01 sibling first">
-                            <a href="http://partner.smart-cosmos.com/" title="Partner and Developer Portal"
+                            <a href="https://partner.smart-cosmos.com/" title="Partner and Developer Portal"
                                class="naviBigListeRoot01 sibling first">Partner Portal</a>
                         </li>
 
