PROFILES-533 Update Profiles welcome page content -> Profiles Product Description as Marketing pitch :-)

--- a/src/main/resources/assets/index.html
+++ b/src/main/resources/assets/index.html
@@ -123,13 +123,27 @@
 
                         <h1>SMART COSMOS Profiles is up and running!</h1>
 
+						
+						<h2>Business Problem</h2>
+<p>
+The fundamental premise behind the Internet of Things is that each discrete thing has a way of uniquely identifying itself on the network. Identification in complex systems that include a power source is trivial. What about apparel, medicine, purses, books, doors, shoes, wine, and other similar things? Businesses struggle with two closely interrelated problems. First, product designers are not willing to sacrifice the aesthetic appeal of their designs solely for the purposes of unique identification and product authenticity. Second, businesses recognize a need to combat product fraud, but often struggle to find the right balance between cost and security.
+</p>
+                    </div>
+
+                    <div class="ce_text block">
+<h2>Product Introduction</h2>
+<p>
+Profiles provides businesses with two critical features that enable the realization of an Internet of Things:  The ability to manage thing identity and security features that forge a trusted IoT. Offered as a Cloud-based SaaS that is linked into SMARTRAC manufacturing facilities, and optionally fed data securely from other vendors in your supply chain, Profiles is your authoritative identity repository. The moment the tag is born, its unique metadata, IP compliance, security profile, and performance data is captured and uploaded to Profiles. Product designers do not have to sacrifice aesthetics when integrating identity and authenticity features. Passive RFID transponders neither require batteries nor a visual line of sight to interact with the tag’s data. The combination of Profiles and an embedded tag power your IoT.
+	</p>					
+						<!--
+						
                         <h2>Configuration Instructions</h2>
 
                         <p>
                             Please read the <a href="https://smartractechnology.atlassian.net/wiki/display/SCKB/SMART+COSMOS+Profiles">How-to
                             articles</a> at the SMART COSMOS Developer Portal for important information about how to use the Profiles server.
                         </p>
-
+-->
                     </div>
 
                     <div class="ce_text block">
