Add Profiles Issue Collector

--- a/src/main/resources/assets/index.html
+++ b/src/main/resources/assets/index.html
@@ -15,10 +15,7 @@
 </head>
 <body id="top" class="win chrome webkit ch39">
 
-
-<script type="text/javascript"
-        src="https://smartractechnology.atlassian.net/s/20a3ef25a54ddb25e90f04799fcf1500-T/en_US-gny102/65000/64/1.4.25/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=0a8f8726"></script>
-
+<script type="text/javascript" src="https://smartractechnology.atlassian.net/s/9146de923efa3a6823c76dc7668f638f-T/en_USagaz99/72000/290fc63d1ba5dbf7050322cb86fc036c/2.0.13/_/download/batch/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector/com.atlassian.jira.collector.plugin.jira-issue-collector-plugin:issuecollector.js?locale=en-US&collectorId=9d2cb971"></script>
 
 <div id="wrapper">
 
