Welcome: SMART COSMOS Profiles wording unified

--- a/src/main/resources/assets/index.html
+++ b/src/main/resources/assets/index.html
@@ -132,7 +132,7 @@
                         <h1>SMART COSMOS Profiles is up and running!</h1>
 
 						
-						<h2>Business Problem</h2>
+						<h2>Business Solution</h2>
 <p>
 The fundamental premise behind the Internet of Things is that each discrete thing has a way of uniquely identifying itself on the network. Identification in complex systems that include a power source is trivial. What about apparel, medicine, purses, books, doors, shoes, wine, and other similar things? Businesses struggle with two closely interrelated problems. First, product designers are not willing to sacrifice the aesthetic appeal of their designs solely for the purposes of unique identification and product authenticity. Second, businesses recognize a need to combat product fraud, but often struggle to find the right balance between cost and security.
 </p>
