--- a/src/main/resources/assets/tula.html
+++ b/src/main/resources/assets/tula.html
@@ -106,7 +106,7 @@
 
                     <div class="ce_text first block">
 
-                        <h1 class="upper">Smartcosmos "Profiles" – Terms of Use and License Agreement (TULA)</h1>
+                        <h1 class="upper">SMART COSMOS "Profiles" – Terms of Use and License Agreement (TULA)</h1>
 
 
                         <p align="center" class="strong">I. Object of TULA, Changes to TULA</p>
@@ -118,7 +118,7 @@
                             </tr>
                             <tr valign="top">
                                 <td class="number">1.1</td>
-                                <td class="text">This Terms of Use and License Agreement ("<strong>TULA"</strong> applies to each registered user ("<strong>Licensee</strong>") of the cloud platform SMARTCOSMOS "Profiles" ("Profiles") provided by SMARTRAC TECHNOLOGY Fletcher Inc., 267 Cane Creek Road, Fletcher, NC 28732, USA ("<strong>SMARTRAC</strong>").</td>
+                                <td class="text">This Terms of Use and License Agreement ("<strong>TULA"</strong> applies to each registered user ("<strong>Licensee</strong>") of the cloud platform SMART COSMOS "Profiles" ("Profiles") provided by SMARTRAC TECHNOLOGY Fletcher Inc., 267 Cane Creek Road, Fletcher, NC 28732, USA ("<strong>SMARTRAC</strong>").</td>
                             </tr>
                             <tr valign="top">
                                 <td class="number">1.2</td>
